[gd_scene load_steps=7 format=2]

[ext_resource path="res://Agent.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.51497 )
colors = PoolColorArray( 0.263397, 0.363184, 0.535156, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.89722

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.013245, 0.933775 )
colors = PoolColorArray( 0.264862, 1, 0.136719, 1, 0.839844, 0.0131226, 0.0518751, 1 )

[node name="Agent" type="RigidBody2D"]
position = Vector2( 484, 261.439 )
contacts_reported = 6
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 50, 50 )

[node name="LeftLeg" type="CollisionShape2D" parent="."]
position = Vector2( -30.1606, 30.9543 )
rotation = 0.522514
shape = SubResource( 4 )

[node name="RightLeg" type="CollisionShape2D" parent="."]
position = Vector2( 30.9543, 32.9386 )
rotation = -0.411505
shape = SubResource( 4 )

[node name="LineLeft" type="Line2D" parent="."]
points = PoolVector2Array( -20.4756, 17.0142, -39.1276, 46.7779 )

[node name="LineRight" type="Line2D" parent="."]
position = Vector2( 50.0031, 1.19055 )
points = PoolVector2Array( -27.6189, 16.2205, -10.9512, 47.9685 )

[node name="MainEngine" type="CPUParticles2D" parent="."]
position = Vector2( 1.5874, 25.3984 )
emitting = false
amount = 32
speed_scale = 4.0
randomness = 0.6
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.1
scale_amount = 6.0
scale_amount_random = 0.5
color_ramp = SubResource( 5 )

[node name="LeftEngine" type="CPUParticles2D" parent="."]
position = Vector2( -24.6047, -13.8898 )
emitting = false
speed_scale = 4.0
randomness = 0.6
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 2 )
direction = Vector2( -1, 0 )
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.1
scale_amount = 6.0
scale_amount_random = 0.5
color_ramp = SubResource( 5 )

[node name="RightEngine" type="CPUParticles2D" parent="."]
position = Vector2( 25.0016, -14.2866 )
emitting = false
speed_scale = 4.0
randomness = 0.6
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 2 )
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.1
scale_amount = 6.0
scale_amount_random = 0.5
color_ramp = SubResource( 5 )
